2013-03-06  Michal Staniaszek  <mxs968@cs.bham.ac.uk>

	* generator.c: Muparser generation code can now generate multiple sets of streams
	from the same expression by passing a number to the -c switch. Now uses an updated
	output file style to match the one used by the random function generator.

2013-03-03  Michal Staniaszek  <mxs968@cs.bham.ac.uk>

	* file_util.c: Fixed memory leak caused by lost pointer references in the
	get_event_data_interval function. Fixed issue where experimenter would not
	be able to open more files because file descriptors of directories were not
	being freed correctly.

	* experimenter.c: Goodness values averaged over each function in the experiment to
	get a representative value for each experiment. These values are output	to file.
	Function for stuttering streams modified to read data from the default parameter
	file which should be available whenever it is called. It now uses the interval time
	for generation to get the actual number of array locations it needs to store all the
	intervals that will be calculated. The best parameter settings for individual functions
	are now output to the top level of each experiment directory.

2013-03-02  Michal Staniaszek  <mxs968@cs.bham.ac.uk>

	* experimenter.c: Function estimation experiments now output correctly to files.
	Stuttering functions simplified so that two separate versions are not necessary.
	Intervals for uniform stuttering are computed and then passed to a function which
	operates on double_arr structs. Non-uniform stuttering intervals are already
	specified, so no additional computation is necessary. "Goodness" calculation
	based on difference between bin counts from function estimated from stuttered
	data and the actual function.

	* launcher.c: Fixed some memory leaks caused by changes to return types.

	* estimator.c: _estimate function return value changed to void* so that gaussian
	vectors can also be returned. Single stream estimation when input file is null