@@ -1,3 +1,10 @@
+2013-03-08  Michal Staniaszek  <mxs968@cs.bham.ac.uk>
+
+	* estimator.c: The estimation functions now take a flag which sets how they construct
+	file names to read from. If the -r switch is passed, the function_outfile parameter
+	will be used in the filename. Otherwise, the expression_outfile parameter will be used.
+	This allows the estimators to read from files generated by both types of generators.
+
 2013-03-06  Michal Staniaszek  <mxs968@cs.bham.ac.uk>
 
 	* generator.c: Muparser generation code can now generate multiple sets of streams
